Edited files terraform.tfvars.example and README.md

--- a/terraform/terraform.tfvars.example
+++ b/terraform/terraform.tfvars.example
@@ -1,8 +1,9 @@
-cloud_id                 = "gfdfgdsfg67df6g8sdfg"
-folder_id                = "dsfgefgdsf67g6dfgdf6"
+cloud_id                 = "b1gse64gvl75t456j5c9"
+folder_id                = "b1gu69dv199646cel99f"
 zone                     = "ru-central1-a"
-image_id                 = "sfg6fgsd6f56sdfdff68"
+image_id                 = "fd8b6at302h74g73fkh0"
 public_key_path          = "~/.ssh/ubuntu.pub"
 private_key_path         = "~/.ssh/ubuntu"
-subnet_id                = "86dfgsdfs86g6sdf65gds"
-service_account_key_file = "~/key.json"
+subnet_id                = "e9bahd5a06vd2s5f6hhf"
+service_account_key_file = "~/yandex_cloud_key.json"
+app_instances_count      = 3
