--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = ./environments/stage/inventory.yml
+inventory = ./environments/prod/inventory.sh
 remote_user = ubuntu
 private_key_file = ~/.ssh/ubuntu
 # Отключим проверку SSH Host-keys (поскольку они всегда разные для новых инстансов)
