Fixing Trailing whitespace

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ variables.json
 .DS_Store
 jdauphant.nginx
 vault.key
+# Vagrant & molecule
+.vagrant/
+*.log
+*.pyc
+.molecule
+.cache
+.pytest_cache
